tests-integration/tests/roundtrip/invalid/semantic_errors/multiple_errors/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic_errors/multiple_errors/multiple_errors.essence:1:6:
  |
1 | find int : int(1..n)
  |      ^
Missing <identifier>

tests/roundtrip/invalid/semantic_errors/multiple_errors/multiple_errors.essence:1:6:
  |
1 | find int : int(1..n)
  |      ^
Missing :

tests/roundtrip/invalid/semantic_errors/multiple_errors/multiple_errors.essence:1:10:
  |
1 | find int : int(1..n)
  |          ^
Missing <identifier>

tests/roundtrip/invalid/semantic_errors/multiple_errors/multiple_errors.essence:1:10:
  |
1 | find int : int(1..n)
  |          ^
Missing ,

tests/roundtrip/invalid/semantic_errors/multiple_errors/multiple_errors.essence:1:19:
  |
1 | find int : int(1..n)
  |                   ^
Error: Symbol not found "n"

tests/roundtrip/invalid/semantic_errors/multiple_errors/multiple_errors.essence:2:11:
  |
2 | such that int > 5
  |           ^^^^^^^
Skipped tokens

tests/roundtrip/invalid/semantic_errors/multiple_errors/multiple_errors.essence:2:11:
  |
2 | such that int > 5
  |           ^
Missing Expression

